// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`notice formatting > preserves legacy output byte-for-byte: "  First & <plain>.\\nnext line\\n\\n\\n Second paragraph.  " 1`] = `
{
  "body": {
    "bodyHtml": "<p style="margin:0 0 14px 0;font-size:14px;color:#1a1a1a;line-height:1.6;">First &amp; &lt;plain&gt;.<br>next line</p>
<p style="margin:0 0 14px 0;font-size:14px;color:#1a1a1a;line-height:1.6;">Second paragraph.</p>

            <table role="presentation" cellpadding="0" cellspacing="0" style="margin:18px 0;">
              <tr>
                <td style="border-radius:8px;background:#0064BC;">
                  <a href="https://example.com/status" style="display:inline-block;padding:12px 24px;font-size:14px;font-weight:600;color:#ffffff;text-decoration:none;border-radius:8px;">Status</a>
                </td>
              </tr>
            </table>",
    "bodyText": "First & <plain>.
next line

Second paragraph.

Status: https://example.com/status",
    "heading": "Maintenance",
    "previewText": "First & <plain>.
next line",
  },
  "email": {
    "html": "<!doctype html>
<html lang="pl">
  <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <title>Maintenance</title>
    
  </head>
  <body style="margin:0;padding:0;background:#f0f2f5;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;">
    <span style="display:none!important;visibility:hidden;opacity:0;color:transparent;height:0;width:0;overflow:hidden;mso-hide:all;">First &amp; &lt;plain&gt;.
next line</span>
    <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f0f2f5;padding:24px 0;">
      <tr>
        <td align="center">
          <table role="presentation" width="600" cellpadding="0" cellspacing="0" style="max-width:600px;width:100%;background:#ffffff;border-radius:12px;overflow:hidden;box-shadow:0 1px 3px rgba(0,0,0,0.08);">
            <tr>
              <td style="background:#0064BC;padding:20px 24px;"><img src="https://mail.example.com/brand/logo.png" alt="Acme Inc." height="36" style="height:36px;display:block;border:0;"></td>
            </tr>
            <tr>
              <td style="padding:24px 24px 4px 24px;">
                <h1 style="margin:0;font-size:18px;line-height:1.4;color:#1a1a1a;font-weight:700;">Maintenance</h1>
              </td>
            </tr>
            <tr>
              <td style="padding:12px 24px 0 24px;">
                <p style="margin:0 0 14px 0;font-size:14px;color:#1a1a1a;line-height:1.6;">First &amp; &lt;plain&gt;.<br>next line</p>
<p style="margin:0 0 14px 0;font-size:14px;color:#1a1a1a;line-height:1.6;">Second paragraph.</p>

            <table role="presentation" cellpadding="0" cellspacing="0" style="margin:18px 0;">
              <tr>
                <td style="border-radius:8px;background:#0064BC;">
                  <a href="https://example.com/status" style="display:inline-block;padding:12px 24px;font-size:14px;font-weight:600;color:#ffffff;text-decoration:none;border-radius:8px;">Status</a>
                </td>
              </tr>
            </table>
              </td>
            </tr>
            <tr>
              <td style="padding:24px;">
                <hr style="border:none;border-top:1px solid #eaeaea;margin:0 0 14px 0;">
                <p style="margin:0;font-size:12px;color:#888;line-height:1.6;">Acme Inc. &middot; 123 Example Street, 00-000 Example City &middot; tel: +00 000 000 000 &middot; <a href="https://acme.example" style="color:#0064BC;text-decoration:none;">acme.example</a></p>
              </td>
            </tr>
          </table>
          <p style="margin:16px 0 0 0;font-size:11px;color:#b0b0b0;">Wysłano przez <a href="https://mailstack.techskills.academy/pl" style="color:#b0b0b0;text-decoration:none;">mailstack</a></p>
        </td>
      </tr>
    </table>
  </body>
</html>",
    "text": "Maintenance
===========

First & <plain>.
next line

Second paragraph.

Status: https://example.com/status

----------------------------------------
Acme Inc.
123 Example Street, 00-000 Example City
tel: +00 000 000 000
https://acme.example

Wysłano przez mailstack (https://mailstack.techskills.academy/pl)",
  },
}
`;

exports[`notice formatting > preserves legacy output byte-for-byte: " \\n\\n " 1`] = `
{
  "body": {
    "bodyHtml": "
            <table role="presentation" cellpadding="0" cellspacing="0" style="margin:18px 0;">
              <tr>
                <td style="border-radius:8px;background:#0064BC;">
                  <a href="https://example.com/status" style="display:inline-block;padding:12px 24px;font-size:14px;font-weight:600;color:#ffffff;text-decoration:none;border-radius:8px;">Status</a>
                </td>
              </tr>
            </table>",
    "bodyText": "Status: https://example.com/status",
    "heading": "Maintenance",
    "previewText": "Maintenance",
  },
  "email": {
    "html": "<!doctype html>
<html lang="pl">
  <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <title>Maintenance</title>
    
  </head>
  <body style="margin:0;padding:0;background:#f0f2f5;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;">
    <span style="display:none!important;visibility:hidden;opacity:0;color:transparent;height:0;width:0;overflow:hidden;mso-hide:all;">Maintenance</span>
    <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f0f2f5;padding:24px 0;">
      <tr>
        <td align="center">
          <table role="presentation" width="600" cellpadding="0" cellspacing="0" style="max-width:600px;width:100%;background:#ffffff;border-radius:12px;overflow:hidden;box-shadow:0 1px 3px rgba(0,0,0,0.08);">
            <tr>
              <td style="background:#0064BC;padding:20px 24px;"><img src="https://mail.example.com/brand/logo.png" alt="Acme Inc." height="36" style="height:36px;display:block;border:0;"></td>
            </tr>
            <tr>
              <td style="padding:24px 24px 4px 24px;">
                <h1 style="margin:0;font-size:18px;line-height:1.4;color:#1a1a1a;font-weight:700;">Maintenance</h1>
              </td>
            </tr>
            <tr>
              <td style="padding:12px 24px 0 24px;">
                
            <table role="presentation" cellpadding="0" cellspacing="0" style="margin:18px 0;">
              <tr>
                <td style="border-radius:8px;background:#0064BC;">
                  <a href="https://example.com/status" style="display:inline-block;padding:12px 24px;font-size:14px;font-weight:600;color:#ffffff;text-decoration:none;border-radius:8px;">Status</a>
                </td>
              </tr>
            </table>
              </td>
            </tr>
            <tr>
              <td style="padding:24px;">
                <hr style="border:none;border-top:1px solid #eaeaea;margin:0 0 14px 0;">
                <p style="margin:0;font-size:12px;color:#888;line-height:1.6;">Acme Inc. &middot; 123 Example Street, 00-000 Example City &middot; tel: +00 000 000 000 &middot; <a href="https://acme.example" style="color:#0064BC;text-decoration:none;">acme.example</a></p>
              </td>
            </tr>
          </table>
          <p style="margin:16px 0 0 0;font-size:11px;color:#b0b0b0;">Wysłano przez <a href="https://mailstack.techskills.academy/pl" style="color:#b0b0b0;text-decoration:none;">mailstack</a></p>
        </td>
      </tr>
    </table>
  </body>
</html>",
    "text": "Maintenance
===========

Status: https://example.com/status

----------------------------------------
Acme Inc.
123 Example Street, 00-000 Example City
tel: +00 000 000 000
https://acme.example

Wysłano przez mailstack (https://mailstack.techskills.academy/pl)",
  },
}
`;

exports[`notice formatting > preserves legacy output byte-for-byte: "" 1`] = `
{
  "body": {
    "bodyHtml": "
            <table role="presentation" cellpadding="0" cellspacing="0" style="margin:18px 0;">
              <tr>
                <td style="border-radius:8px;background:#0064BC;">
                  <a href="https://example.com/status" style="display:inline-block;padding:12px 24px;font-size:14px;font-weight:600;color:#ffffff;text-decoration:none;border-radius:8px;">Status</a>
                </td>
              </tr>
            </table>",
    "bodyText": "Status: https://example.com/status",
    "heading": "Maintenance",
    "previewText": "Maintenance",
  },
  "email": {
    "html": "<!doctype html>
<html lang="pl">
  <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <title>Maintenance</title>
    
  </head>
  <body style="margin:0;padding:0;background:#f0f2f5;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;">
    <span style="display:none!important;visibility:hidden;opacity:0;color:transparent;height:0;width:0;overflow:hidden;mso-hide:all;">Maintenance</span>
    <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f0f2f5;padding:24px 0;">
      <tr>
        <td align="center">
          <table role="presentation" width="600" cellpadding="0" cellspacing="0" style="max-width:600px;width:100%;background:#ffffff;border-radius:12px;overflow:hidden;box-shadow:0 1px 3px rgba(0,0,0,0.08);">
            <tr>
              <td style="background:#0064BC;padding:20px 24px;"><img src="https://mail.example.com/brand/logo.png" alt="Acme Inc." height="36" style="height:36px;display:block;border:0;"></td>
            </tr>
            <tr>
              <td style="padding:24px 24px 4px 24px;">
                <h1 style="margin:0;font-size:18px;line-height:1.4;color:#1a1a1a;font-weight:700;">Maintenance</h1>
              </td>
            </tr>
            <tr>
              <td style="padding:12px 24px 0 24px;">
                
            <table role="presentation" cellpadding="0" cellspacing="0" style="margin:18px 0;">
              <tr>
                <td style="border-radius:8px;background:#0064BC;">
                  <a href="https://example.com/status" style="display:inline-block;padding:12px 24px;font-size:14px;font-weight:600;color:#ffffff;text-decoration:none;border-radius:8px;">Status</a>
                </td>
              </tr>
            </table>
              </td>
            </tr>
            <tr>
              <td style="padding:24px;">
                <hr style="border:none;border-top:1px solid #eaeaea;margin:0 0 14px 0;">
                <p style="margin:0;font-size:12px;color:#888;line-height:1.6;">Acme Inc. &middot; 123 Example Street, 00-000 Example City &middot; tel: +00 000 000 000 &middot; <a href="https://acme.example" style="color:#0064BC;text-decoration:none;">acme.example</a></p>
              </td>
            </tr>
          </table>
          <p style="margin:16px 0 0 0;font-size:11px;color:#b0b0b0;">Wysłano przez <a href="https://mailstack.techskills.academy/pl" style="color:#b0b0b0;text-decoration:none;">mailstack</a></p>
        </td>
      </tr>
    </table>
  </body>
</html>",
    "text": "Maintenance
===========

Status: https://example.com/status

----------------------------------------
Acme Inc.
123 Example Street, 00-000 Example City
tel: +00 000 000 000
https://acme.example

Wysłano przez mailstack (https://mailstack.techskills.academy/pl)",
  },
}
`;

exports[`notice formatting > preserves legacy output byte-for-byte: "First\\r\\n\\r\\nSecond" 1`] = `
{
  "body": {
    "bodyHtml": "<p style="margin:0 0 14px 0;font-size:14px;color:#1a1a1a;line-height:1.6;">First
<br>
<br>Second</p>

            <table role="presentation" cellpadding="0" cellspacing="0" style="margin:18px 0;">
              <tr>
                <td style="border-radius:8px;background:#0064BC;">
                  <a href="https://example.com/status" style="display:inline-block;padding:12px 24px;font-size:14px;font-weight:600;color:#ffffff;text-decoration:none;border-radius:8px;">Status</a>
                </td>
              </tr>
            </table>",
    "bodyText": "First

Second

Status: https://example.com/status",
    "heading": "Maintenance",
    "previewText": "First

Second",
  },
  "email": {
    "html": "<!doctype html>
<html lang="pl">
  <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <title>Maintenance</title>
    
  </head>
  <body style="margin:0;padding:0;background:#f0f2f5;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;">
    <span style="display:none!important;visibility:hidden;opacity:0;color:transparent;height:0;width:0;overflow:hidden;mso-hide:all;">First

Second</span>
    <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f0f2f5;padding:24px 0;">
      <tr>
        <td align="center">
          <table role="presentation" width="600" cellpadding="0" cellspacing="0" style="max-width:600px;width:100%;background:#ffffff;border-radius:12px;overflow:hidden;box-shadow:0 1px 3px rgba(0,0,0,0.08);">
            <tr>
              <td style="background:#0064BC;padding:20px 24px;"><img src="https://mail.example.com/brand/logo.png" alt="Acme Inc." height="36" style="height:36px;display:block;border:0;"></td>
            </tr>
            <tr>
              <td style="padding:24px 24px 4px 24px;">
                <h1 style="margin:0;font-size:18px;line-height:1.4;color:#1a1a1a;font-weight:700;">Maintenance</h1>
              </td>
            </tr>
            <tr>
              <td style="padding:12px 24px 0 24px;">
                <p style="margin:0 0 14px 0;font-size:14px;color:#1a1a1a;line-height:1.6;">First
<br>
<br>Second</p>

            <table role="presentation" cellpadding="0" cellspacing="0" style="margin:18px 0;">
              <tr>
                <td style="border-radius:8px;background:#0064BC;">
                  <a href="https://example.com/status" style="display:inline-block;padding:12px 24px;font-size:14px;font-weight:600;color:#ffffff;text-decoration:none;border-radius:8px;">Status</a>
                </td>
              </tr>
            </table>
              </td>
            </tr>
            <tr>
              <td style="padding:24px;">
                <hr style="border:none;border-top:1px solid #eaeaea;margin:0 0 14px 0;">
                <p style="margin:0;font-size:12px;color:#888;line-height:1.6;">Acme Inc. &middot; 123 Example Street, 00-000 Example City &middot; tel: +00 000 000 000 &middot; <a href="https://acme.example" style="color:#0064BC;text-decoration:none;">acme.example</a></p>
              </td>
            </tr>
          </table>
          <p style="margin:16px 0 0 0;font-size:11px;color:#b0b0b0;">Wysłano przez <a href="https://mailstack.techskills.academy/pl" style="color:#b0b0b0;text-decoration:none;">mailstack</a></p>
        </td>
      </tr>
    </table>
  </body>
</html>",
    "text": "Maintenance
===========

First

Second

Status: https://example.com/status

----------------------------------------
Acme Inc.
123 Example Street, 00-000 Example City
tel: +00 000 000 000
https://acme.example

Wysłano przez mailstack (https://mailstack.techskills.academy/pl)",
  },
}
`;
